# tasty-github-actions

./: README.md  tasty-github-actions.cabal
.github/workflows/: haskell-ci.yml
src/Test/Tasty/: GitHubActions.hs
test/: Main.hs
